# de-ips4

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  justfile  pyproject.toml
notebooks/: task-1.ipynb  task-2.2.ipynb  task-2.ipynb  task-3.ipynb
