[project]
name = "DE-software-solution"
version = "0.1.0"
description = "Software implementations of the Euler, Runge-Kutta, and Adams differential equations solution methods."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
    "jupyterlab-lsp>=5.2.0",
    "pyright>=1.1.407",
    "python-lsp-server[all]>=1.13.1",
]
